Added tinsel instructions and improved styling

--- a/tree.html
+++ b/tree.html
@@ -182,7 +182,7 @@
 			<input class="colour-picker" type="color" name="tinsel-colour" value="#C0C0C0">
 		</div>
 		<div class="control">
-			<p>Add a new decoration! Select one here, then click on the tree</p>
+			<p>Add a decoration! Select one here, then click on the tree</p>
 			<select name="decoration-select" class="decoration-select">
 				<option value=""> </option>
 				<option value="light">light</option>
@@ -199,6 +199,7 @@
 				<option value="🛷">🛷</option>
 				<option value="tinsel">tinsel</option>
 			</select>
+			<p>For tinsel, click the tree and drag across</p>
 		</div>
 		<div class="sound-effect-box">
 			<h4>Sound Effect Zone 🎧</h4>
